// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem matches it snapshot - complete 1`] = `
<li
  className="complete"
>
  Not complete
   :)
</li>
`;

exports[`TodoItem matches its snapshot - not complete 1`] = `
<li
  className="complete"
>
  Note complete
   :)
</li>
`;
